--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -224,5 +224,6 @@ body {
     display: flex;
     flex-flow: column nowrap;
     line-height: 1.6;
+    padding-bottom: 1em;
   }
 }
